<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.qmuiteam.qmui.widget.QMUITopBarLayout
            android:id="@+id/ui_topbar"
            style="@style/commonTopbarStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                style="@style/content_title_style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/tutelage_infor" />

            <!--监护人员-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_tutelage_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/tutelage_person"
                app:fm_content_item_et_hint ="@string/tutelage_person_hint"
                />

            <!--监护开始时间-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_tutelage_starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/tutelage_starttime_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="true"
                app:fm_content_item_show_tip_icon="true"
                app:fm_content_item_title="@string/tutelage_starttime" />

            <!--监护结束时间-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_tutelage_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/tutelage_endtime_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="true"
                app:fm_content_item_show_tip_icon="true"
                app:fm_content_item_title="@string/tutelage_endtime" />


            <TextView
                style="@style/content_title_style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/construction_basicinfor" />

            <!--施工项目名称-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_construction_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/construction_name"
                app:fm_content_item_et_hint="@string/construction_person_hint" />

            <!--施工日期-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_construction_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="true"
                app:fm_content_item_show_tip_icon="true"
                app:fm_content_item_title="@string/construction_data"
                app:fm_content_item_et_hint="@string/construction_data_hint" />

            <!--施工站点-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_construction_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/construction_site"
                app:fm_content_item_et_hint="@string/construction_site_hint" />

            <!--施工单位-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_construction_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/construction_unit"
                app:fm_content_item_et_hint="@string/construction_unit_hint" />

            <!--现场施工负责人-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_construction_leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/construction_leader"
                app:fm_content_item_et_hint="@string/construction_leader_hint" />

            <!--现场负责人-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_all_leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/all_leader"
                app:fm_content_item_et_hint="@string/all_leader_hint" />

            <TextView
                style="@style/content_title_style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/construction_project" />

            <!--施工监护项目列表-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16">

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/h3_text_style"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:text="@string/construction_project_list"
                        />

                    <TextView
                        android:id="@+id/tv_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/dp_6"
                        android:text="*"
                        android:textColor="@color/red"
                        android:visibility="gone"
                        />

                    <LinearLayout
                        android:id="@+id/llList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/tv_construction_project_list"
                            style="@style/h3_text_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right|center_vertical"
                            android:paddingStart="@dimen/dp_10"
                            android:paddingEnd="@dimen/dp_10"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            tools:text="未完成"
                            />


                        <ImageView
                            android:id="@+id/tip_icon"
                            android:layout_width="@dimen/dp_18"
                            android:layout_height="@dimen/dp_18"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/icon_next_arrow"
                            android:scaleType="center"/>

                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>


            <View
                style="@style/dash_line_style"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16" />

            <TextView
                style="@style/content_title_style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/remark" />

            <com.facilityone.wireless.a.arch.widget.EditNumberView
                android:id="@+id/env_checkcondition_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fm_edit_number_desc="@string/remark_hint" />

        </LinearLayout>

    </LinearLayout>
</layout>